<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoEuro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="location_from">From</string>
    <string name="hint_date">Enter Date</string>
    <string name="search">Search</string>
    <string name="search_not_implemented">Search is not yet implemented.</string>
    <string name="location_to">Destination</string>

</resources>
