<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textLarge"
        android:padding="10dp"
        android:id="@+id/txtAppName"/>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAppName"
        android:id="@+id/frameFromLocation"
        android:layout_margin="10dp"
        >

        <goeuro.de.com.goeurotest.ui.components.DelayAutoCompleteTextView
            android:id="@+id/txt_from"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_from"
            android:imeOptions="flagNoExtractUi|actionSearch"/>

        <ProgressBar
            android:id="@+id/pb_from_indicator"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:paddingRight="10dp"
            android:visibility="gone"/>
    </FrameLayout>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameFromLocation"
        android:id="@+id/frameDestination"
        android:layout_margin="10dp"
        >

        <goeuro.de.com.goeurotest.ui.components.DelayAutoCompleteTextView
            android:id="@+id/txt_destination"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_to"
            android:imeOptions="flagNoExtractUi|actionSearch"/>

        <ProgressBar
            android:id="@+id/pb_destination_indicator"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:paddingRight="10dp"
            android:visibility="gone"/>
    </FrameLayout>

    <TextView
        android:id="@+id/txtDate"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:layout_below="@+id/frameDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:drawableRight="@android:drawable/ic_menu_my_calendar"
        android:hint="@string/hint_date"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:text="@string/search"
        android:layout_below="@+id/txtDate"
        android:layout_margin="10dp"
        android:id="@+id/btnSearch"
        android:textSize="15sp"
        android:padding="10dp"
        android:background="@drawable/rounded_button"/>


</RelativeLayout>
